# open_manipulator_interface

./: README.md  README.txt
dynamixel_packages/: README.txt
open_manipulator_controllers/: CMakeLists.txt  package.xml
open_manipulator_controllers/config/: LLCTC.yaml  open_manipulator_effort_config.yaml  open_manipulator_position_config.yaml
open_manipulator_controllers/include/open_manipulator_controllers/: position_controller.h  torque_controller.h
open_manipulator_controllers/launch/: position_controller.launch  torque_controller.launch
open_manipulator_controllers/src/: position_controller.cpp  torque_controller.cpp
